--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,10 @@ owner: 898311543 # Your GitHub organization or username, where this repository l
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
+  - name: HomeAssistant
+    url: https://hass.898311.xyz:8123
+  - name: Router
+    url: http://hass.898311.xyz:8838/
   - name: Hacker News
     url: https://news.ycombinator.com
   - name: Test Broken Site
