--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,7 +9,7 @@ sites:
   #   url: http://hass.898311.xyz:8838/
   # - name: Hacker News
   #   url: https://news.ycombinator.com
-  - name: Test Broken Site
+  - name: Alist
     url: http://hass.898311.xyz:8200
   - name: Router
     url: hass.898311.xyz
